--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                     <li><strong>Security:</strong> ns_staid</li>
                     <li><strong>Smuggling:</strong> bigstepper__</li>
                     <li><strong>Influence:</strong> innocentrag</li>
+                    <li><strong>Production:</strong> cupricturnip417_1089</li>
                     <li><strong>Discord:</strong> <a href="https://discord.gg/ef6AYEkUGe" target="_blank" rel="noopener noreferrer">Blue Coast Roleplay</a></li>
                 </ul>
             </section>
