--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
     </div>
     <footer>
-        <p>Konni Company - The largest and most organized group in BCRP.</p>
+        <p>© 2024 Konni Company. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
